--- a/godothub/package.json
+++ b/godothub/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "avvvatars-react": "^0.4.2",
     "css-select": "^5.1.0",
     "firebase": "^11.0.1",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
